snapshots/syntax/statements/declarations/mod/private_variable_boolean.snap
---
source: src/syntax/statements/declarations/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: m_isValid
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: BooleanKeyword
          text: Boolean
        - kind: Newline
          text: "\n"
