snapshots/syntax/statements/declarations/mod/private_withevents_preserves_whitespace.snap
---
source: src/syntax/statements/declarations/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: "    "
        - kind: WithEventsKeyword
          text: WithEvents
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: m_obj
        - kind: Whitespace
          text: "    "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: MyClass
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
